@@ -1,3 +1,7 @@
+2019-04-29  Martin Pärtel <martin dot partel at gmail dot com>
+
+	* Added --forward-odirect. Bindfs now clears O_DIRECT by default (PR #74, thanks barp@!).
+
 2019-03-31  Martin Pärtel <martin dot partel at gmail dot com>
 
 	* Fixes to --gid-offset when used with a setgid bit or with --create-as-mounter (PR #73, thanks ehmm@!).
